; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_drm_ctx.c_gfx_ctx_drm_destroy_resources.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_drm_ctx.c_gfx_ctx_drm_destroy_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i32 }

@drm_api = common dso_local global i32 0, align 4
@g_drm_mode = common dso_local global i32* null, align 8
@g_crtc_id = common dso_local global i64 0, align 8
@g_connector_id = common dso_local global i64 0, align 8
@g_bo = common dso_local global i32* null, align 8
@g_next_bo = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @gfx_ctx_drm_destroy_resources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_ctx_drm_destroy_resources(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = icmp ne %struct.TYPE_4__* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %19

6:                                                ; preds = %1
  %7 = call i32 @gfx_ctx_drm_wait_flip(i32 1)
  %8 = load i32, i32* @drm_api, align 4
  switch i32 %8, label %11 [
    i32 130, label %9
    i32 129, label %9
    i32 128, label %9
    i32 131, label %10
  ]

9:                                                ; preds = %6, %6, %6
  br label %12

10:                                               ; preds = %6
  br label %11

11:                                               ; preds = %6, %10
  br label %12

12:                                               ; preds = %11, %9
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %14 = call i32 @free_drm_resources(%struct.TYPE_4__* %13)
  store i32* null, i32** @g_drm_mode, align 8
  store i64 0, i64* @g_crtc_id, align 8
  store i64 0, i64* @g_connector_id, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  store i64 0, i64* %16, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store i64 0, i64* %18, align 8
  store i32* null, i32** @g_bo, align 8
  store i32* null, i32** @g_next_bo, align 8
  br label %19

19:                                               ; preds = %12, %5
  ret void
}

declare dso_local i32 @gfx_ctx_drm_wait_flip(i32) #1

declare dso_local i32 @free_drm_resources(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
